Fix: remove overflow hidden

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
   color-scheme: dark;
-  overflow: hidden;
 }
 
 .hash-span {
